decode jwt function created

--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "base64url": "^3.0.1",
+    "caniuse-lite": "^1.0.30001467",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "qs": "^6.11.0",
     "react": "^18.2.0",
