--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.1",
+    "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "qs": "^6.11.0",
     "react": "^18.2.0",
